feature：使用SpringBoot方式集成SpringDataJPA

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # Project exclude paths
 .idea/*
+*/target
 /spring-data-jpa-with-java-bean-config/target/
 /spring-data-jpa-with-xml-config/target/
