--- a/jpa-configuration-method/pom.xml
+++ b/jpa-configuration-method/pom.xml
@@ -3,14 +3,19 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
-    <groupId>vip.openpark</groupId>
-    <artifactId>spring-data-jpa-learn</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>jpa-configuration-method</artifactId>
     <packaging>pom</packaging>
 
+    <parent>
+        <groupId>vip.openpark</groupId>
+        <artifactId>spring-data-jpa-learn</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
     <modules>
-        <module>jpa-configuration-method</module>
+        <module>jpa-with-xml-config</module>
+        <module>jpa-with-java-bean-config</module>
+        <module>jpa-with-spring-boot</module>
     </modules>
 
     <properties>
@@ -18,4 +23,5 @@
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
 </project>
